JS App 03.Sheep and Rams 90% ready

--- a/WebAndUI/CSS/IV. LESS/CSS/homework.less
+++ b/WebAndUI/CSS/IV. LESS/CSS/homework.less
@@ -48,16 +48,16 @@ div, h1, h3, h4, h5, h6, header, footer, body, section, nav, article, aside {
 }
 
 .border() {
-    1px solid black;
+    border:1px solid black;
 }
 
 .border-R15() {
-    border: .border();
+    .border();
     border-radius: 15px;
 }
 
 .border-R5() {
-    border: .border();
+    .border();
     border-radius: 5px;
 }
 
