--- a/WebAndUI/JS Apps/03. Web storages/css/styles.css
+++ b/WebAndUI/JS Apps/03. Web storages/css/styles.css
@@ -34,7 +34,8 @@ body #container {
   border: 4px solid gray;
   border-radius: 10px;
   width: 500px;
-  height: 800px;
+  /*min-height: 600px;*/
+  /*max-height: 700px;*/
   margin: 50px auto 20px;
   padding: 20px;
 }
@@ -86,9 +87,9 @@ body #container .result img {
   border-radius: 10px;
   padding: 10px;
 }
-body #container .userTrys {
+body #container .userTries,
+body #container .best-scores {
   width: 200px;
-  height: 50px;
   margin: 10px auto;
   display: block;
   border: 4px solid gray;
@@ -96,5 +97,9 @@ body #container .userTrys {
   background-color: lightcyan;
   font-size: 2em;
   text-align: center;
+  padding: 10px;
+}
+body #container .userTries {
+  height: 50px;
 }
 /*# sourceMappingURL=styles.css.map */
