--- a/WebAndUI/JS Apps/03. Web storages/css/styles.less
+++ b/WebAndUI/JS Apps/03. Web storages/css/styles.less
@@ -14,7 +14,8 @@ body {
         border: 4px solid gray;
         border-radius: 10px;
         width: 500px;
-        height: 800px;
+        /*min-height: 600px;*/
+        /*max-height: 700px;*/
         margin: 50px auto 20px;
         padding: 20px;
 
@@ -73,9 +74,8 @@ body {
             }
         }
 
-        .userTrys {
+        .userTries, .best-scores {
             width: 200px;
-            height: 50px;
             margin: 10px auto;
             display: block;
             border: 4px solid gray;
@@ -83,6 +83,11 @@ body {
             background-color: lightcyan;
             font-size: 2em;
             text-align: center;
+            padding: 10px;
+        }
+
+        .userTries{
+            height: 50px;
         }
     }
 }
