Consumin remote data 2015

--- a/WebAndUI/JS Apps/06. Consuming Remote Data/styles/style.css
+++ b/WebAndUI/JS Apps/06. Consuming Remote Data/styles/style.css
@@ -25,6 +25,10 @@ em {
   padding: 0;
   border: 0;
 }
+.clearfix {
+  overflow: auto;
+  zoom: 1;
+}
 body {
   background-color: aliceblue;
   font-size: 16px;
@@ -40,9 +44,10 @@ body {
 #container #add-student,
 #container #delete-student,
 #container #load-student {
-  display: inline-block;
+  /*display: inline-block;*/
+  float: left;
   width: 160px;
-  height: 160px;
+  height: 180px;
   border: 3px solid darkgray;
   border-radius: 6px;
   padding: 20px;
@@ -55,10 +60,11 @@ body {
 #container #delete-student .message,
 #container #load-student .message {
   width: 150px;
-  height: 25px;
+  /*min-height: 25px;*/
   border: 2px solid darkgray;
   border-radius: 5px;
   margin: 5px auto;
+  padding: 5px 0;
   text-align: center;
   background-color: lightcyan;
 }
@@ -75,6 +81,7 @@ body {
 #container #delete-student .message,
 #container #load-student .message {
   color: red;
+  display: none;
 }
 #container #load-student {
   width: 420px;
