--- a/WebAndUI/JS Apps/06. Consuming Remote Data/styles/style.less
+++ b/WebAndUI/JS Apps/06. Consuming Remote Data/styles/style.less
@@ -5,6 +5,11 @@ label, p, fieldset, nav, ul, li, a, span, strong, em {
     border: 0;
 }
 
+.clearfix {
+    overflow: auto;
+    zoom: 1;
+}
+
 body {
     background-color: aliceblue;
     font-size: 16px;
@@ -19,9 +24,10 @@ body {
     padding: 20px;
 
     #add-student, #delete-student, #load-student {
-        display: inline-block;
+        /*display: inline-block;*/
+        float: left;
         width: 160px;
-        height: 160px;
+        height: 180px;
         border: 3px solid darkgray;
         border-radius: 6px;
         padding: 20px;
@@ -29,10 +35,11 @@ body {
 
         .button, .message {
             width: 150px;
-            height: 25px;
+            /*min-height: 25px;*/
             border: 2px solid darkgray;
             border-radius: 5px;
             margin: 5px auto;
+            padding: 5px 0;
             text-align: center;
             background-color: lightcyan;
 
@@ -44,12 +51,13 @@ body {
 
         .message {
             color: red;
+            display: none;
         }
     }
 
     #load-student {
         width: 420px;
-        margin:20px auto;
-        height:auto;
+        margin: 20px auto;
+        height: auto;
     }
 }
