some test commit

--- a/SoftwareTechnoligies/SinglePageApplications/99. Exam/Exam/Exam/views/partials/login.html
+++ b/SoftwareTechnoligies/SinglePageApplications/99. Exam/Exam/Exam/views/partials/login.html
@@ -1,4 +1,4 @@
-<div ng-controller="LoginCtrl" class="nav navbar-nav navbar-right">
+<div ng-controller="LoginController" class="nav navbar-nav navbar-right">
     <form ng-hide="identity.isAuthenticated()" class="navbar-form" name="loginForm">
         <div class="form-group">
             <input type="text" required placeholder="E-mail" ng-model="user.username" class="form-control" />
